# gr-flexfft

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: flexfftConfig.cmake
docs/: README.flexfft
docs/doxygen/: Doxyfile.in  Doxyfile.swig_doc.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: flex_fft_sink_example.grc
grc/: CMakeLists.txt  flexfft_flex_fft_sink.xml
include/flexfft/: CMakeLists.txt  DisplayPlot.h  TimeDomainDisplayPlot.h  api.h  displayform.h  flex_fft_sink.h  form_menus.h  qtgui_types.h  spectrumUpdateEvents.h  timecontrolpanel.h  timedisplayform.h  trigger_mode.h
lib/: CMakeLists.txt  DisplayPlot.cc  TimeDomainDisplayPlot.cc  displayform.cc  flex_fft_sink_impl.cc  flex_fft_sink_impl.h  qa_flexfft.cc  qa_flexfft.h  spectrumUpdateEvents.cc  test_flexfft.cc  timecontrolpanel.cc  timedisplayform.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  flexfft_swig.i
